# raft

./: .gitignore  LICENSE  README.md  raft.cabal  stack.yaml
issues/: RAFT-1
src/main/haskell/raft/: InputOutput.hs  Main.hs  Net.hs  Raft.hs  Util.hs
